apps/system-tools/open-webui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
spec:
  selector:
    app: open-webui
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
